--- a/documentation/lang-ref-man/lrm.tex
+++ b/documentation/lang-ref-man/lrm.tex
@@ -119,8 +119,8 @@ The first character of an identifier must be a letter. Identifiers can contain l
 The following keywords are part of dots itself, and as such cannot be used as 
 identifiers:
 
-\code{bool break continue def dict else true false for graph if in INF list 
-node null num return string while}
+\code{return break continue def for while if else in 
+ dict list num bool string graph node INF true false null}
 
 \subsection{Literals}
 
@@ -239,7 +239,7 @@ graph g3 = {
 
 \section{Expressions and Operators}
 
-An \textbf{expression} has at least one operand and at least one operator. Operators have types including constants, variables, and functions that return values. For example:
+A compound \textbf{expression} has at least one operand and at least one operator. Operators have types including constants, variables, and functions that return values. For example:
 
 \begin{lstlisting}[language=pltLang, caption=demonstration of expressions and subexpressions, label=lst:expr]
 3 * 4; 
@@ -250,27 +250,27 @@ An \textbf{expression} has at least one operand and at least one operator. Opera
 
 \subsection{Number and String Operators}
 
-Operators are operations that are performed on operands which can be functions, variables, or data types. 
-\textbf{Numerical operators} are operators that include arithmetic and comparative operators.
+Operators are special symbols that are used to perform actions on operands. An operand can be a function, variable, or literal.
+\textbf{Numerical operators} are either arithmetic or comparative operators that operate on the \code{num} data type.
 
 \emph{Arithmetic Operators} \\
-Arithmetic Operators function exactly like C with primitive data types such as literals,  variables and functions. d.o.t.s support the addition, subtraction, multiplication, division and modular divison operators. Similar to C, integer division truncates the resulting value \code {5 / 3 = 1}. Modular division returns the remainder of a given division ie \code {5 \% 3 = 2} 
+Arithmetic Operators function exactly like C with primitive data types such as literals,  variables and functions. d.o.t.s supports the addition, subtraction, multiplication, division and modular divison operators. Similar to C, integer division truncates the resulting value \code {5 / 3 = 1}. Modular division returns the remainder of a given division. Ex. \code {5 \% 3 = 2} 
 
 \emph{Comparative Operators} \\
-These opeartors relate two operands to each other. Some sample comparisons include: 
+These operators relate two operands to each other. Some sample comparisons include: 
 \begin{lstlisting}[language=pltLang, caption=Declaration of ``string'' types., label=lst:ops]
 #operators: >,<,==,!=, <=, >=,||,&&
 
-3 == 4; 
-(x && 3) || z;
-(foo && x++)
+3 == 4;  # returns false
+(x && 3) || z; # if x and z are both false, returns false; else returns true
+(foo && x)
 \end{lstlisting}
 
-all operators function as they do in C as long as the operands are primitive data types, variables or functions. The result of a comparison operation is a boolean. 
+All comparitive operators function as they do in C as long as the operands are primitive data types, variables or functions. The result of a comparison operation is a boolean. 
 
 \subsection{Node Operators}
 
-The node operators outlined in Table \ref{tbl:node-ops} below are all binary operators which take a node object on the left-hand and right-hand sides of the operator.
+The node operators outlined in Table \ref{tbl:node-ops} below are all binary operators which take a node object on the left-hand and right-hand sides of the operator.  (Basic Form: \code{\emph{node\_var} \emph{node\_op} \emph{node\_var}})
 
 \begin{table}[H]
 \centering
@@ -365,26 +365,38 @@ Operator & Explanation \\
 \label{tbl:graph-ops}
 \end{table}
 
-\subsection{Comparison and Logical Operators}
+There are two logical operators: \code{==} and \code{!=}. The first evaluates to \code{true} if the left and right-hand operands are equal, while the second evaluates to \code{true} if the left and right-hand operands are \emph{not} equal.
 
-Logical operators evaluate the logical truth of two operands. This set of functions operates similarly to the logical operators.
+The logical operators \code{==} and \code{!=} are the only logical operators which function on graph operands. Two graph objects are equal if their \code{vertices} fields contain the same set of \code{node} objects. 
 
-\code{==} and \code{!=} are the only logical operators which function on graph operands. These operators are evaluated by recursively evaluating the Node \code{==} and \code{!=} logical comparison operators.
 
-== signifies that two graphs have the same vertices and edges.
+\begin{lstlisting}[language=pltLang, caption=Shows the use of graph operators., label=lst:graph-ops]
+node x, y, z;
+graph g = {x, y}; # g.vertices: x, y
+g = g + z; # g.vertices: x, y, z
+g = g - z; # g.vertices: x, y
 
-!= signifies that two graphs do not have the same vertices and edges.
+graph g2 = {x, y};
+g2 == g; # return true
+\end{lstlisting}
+
 \subsection{Subscript Notation}
 
 \subsubsection{Subscript}
-\emph{dict subscripts} specify elements within a \code{dict} at a given index. The notation is “D[i]” where brackets denote the key in the dictionary you want to index.
-\emph{list subscripts} specify elements within a \code{list} at a given index. The notation is “L[i]” where brackets denote the position in list L. 
+
+A subscript is indicated by an id followed by an argument enclosed in brackets. The only two data types which can be subscripted are lists and dicts.
+
+Dict objects are subscripted using a key. The notation \code{D[i]}, where D is a \code{dict} returns the value stored in the dictionary at the key i, where i is evaluated if it it's a variable. The type of the key used in a dict subscript must be of the same type as that paritcular dict object's key type.
+
+List objects are subscripted using an index. The notation \code{L[i]} returns the value stored in the list at position/index \emph{i}. \emph{i} must evaluate to an integer. 
 
 
 \subsection{Operator Precendence}
-follows traditional mathematical order of operations: parenthesis, exponent, multiply, divide, addition, subtraction
+
+Operator precedence follows traditional mathematical order of operations: parenthesis, exponent, multiply, divide, addition, subtraction
+
 \subsection{Member Access}
- ``.'' allows you to access members of a structure or a variable
+ The ``.'' character, when not part of a \emph{num} literal, allows access to members of a data type or variable
 
 \begin{lstlisting}[language=pltLang, label=lst:member-access]
 node x, y, z, q, r;
@@ -396,9 +408,9 @@ graph G = {
     r [.87]--[.39] x
 };
 
-print x.in; # prints [r: 0.39]
+x.in; # returns {r: 0.39}
 
-print x.in[r] # dict subscript notation; prints 0.39
+x.in[r] # dict subscript notation; returns 0.39
 
 \end{lstlisting}
 
@@ -449,7 +461,7 @@ while condition {
 \end{lstlisting}
 
 \subsubsection{For Loops}
-\code{for} statements iterate through all elements in \code{iterable\_var}, assigning the current element to \code{var\_name}. 
+\code{for} statements can only be used on the iterable types \code{list} and \code{dict}. A \code{for} statements iterates through all elements in \code{iterable\_var}, assigning the current element to \code{var\_name}. For dicts: the data type of \code{var\_name} is automatically set to the type of the dict's keys, and the dict's keys are iterated over. For lists, the data type of \code{var\_name} is automatically set to the type of the list, and the elements of the list are iterated over. 
 
 \begin{lstlisting}[language=pltLang, label=lst:for-loop]
 for var_name in iterable_var {
